Notebook "5. NLP + ML" - add examples using spaCy

--- a/5_nlp_ml.ipynb
+++ b/5_nlp_ml.ipynb
@@ -12,6 +12,7 @@
     "Text Processing and Machine Learning\n",
     "====================================\n",
     "\n",
+    "- quick overview on natural language processing\n",
     "- pre-processing and tokenization (splitting text into words)\n",
     "- n-grams, vectorization and word embeddings\n",
     "- train and evaluate a text classifier\n",
@@ -31,15 +32,139 @@
     "\n",
     "[Natural language processing (NLP)](https://en.wikipedia.org/wiki/Natural_language_processing) is about programming computers to process and analyze natural language data (text and speech).\n",
     "\n",
-    "During the text classification training we touch only some aspects of NLP, namely\n",
-    "\n",
-    "- tokenization or splitting a text into words (aka. tokens)\n",
-    "- the representation of words in a vector space (word embeddings)\n",
-    "\n",
-    "NLP modules for Python:\n",
-    "\n",
+    "For Python, there are two main NLP modules:\n",
     "- [spaCy](https://spacy.io/) or [spaCy on pypi](https://pypi.org/project/spacy/)\n",
-    "- [NLTK](https://www.nltk.org/) or [NLTK on pypi](https://pypi.org/project/nltk/)\n"
+    "- [NLTK](https://www.nltk.org/) or [NLTK on pypi](https://pypi.org/project/nltk/)\n",
+    "\n",
+    "Both modules implement the following NLP applications (and more), at least, for some languates:\n",
+    "- named entity recognition (NER)\n",
+    "- sentiment detection\n",
+    "- tokenization: splitting a text into words (aka. tokens)\n",
+    "- part-of-speech tagging (POS)\n",
+    "- lemmatization: mapping a word in text to its base form (aka. lemma)\n",
+    "- syntax parsing\n",
+    "- semantic representation of words\n",
+    "\n",
+    "We'll first look into spaCy to explore NLP applications. Later, during the text classification we'll also touch some aspects of NLP, namely tokenization and the semantic representation of words in a vector space (word embeddings).\n",
+    "\n",
+    "Work with spaCy also requires to install code modules for the natural languages to be processed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "latter-worthy",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%script false --no-raise-error\n",
+    "# comment the above instruction to run this code\n",
+    "#\n",
+    "# spaCy installation and core modules for English and German\n",
+    "# - https://spacy.io/models/en\n",
+    "# - https://spacy.io/models/de\n",
+    "# note: download modules only once!\n",
+    "!pip install spacy\n",
+    "!python -m spacy download en_core_web_sm\n",
+    "!python -m spacy download de_core_news_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "developmental-cologne",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"de_core_news_sm\")\n",
+    "\n",
+    "# we use a text from notebook 4 \"Web Scraping\"\n",
+    "text = 'Geboren am 16. Mai 1980 in Ahaus; römisch-katholisch.Nach dem Abitur Ausbildung zum Bankkaufmann, anschließend Angestellter; Studium der Politikwissenschaften (M.A.).Seit 1997 Mitglied der CDU; seit 2005 Vorsitzender des CDU-Kreisverbandes Borken; seit Dezember 2014 Mitglied des CDU-Bundespräsidiums.Mitglied des Bundestages seit 2002; 2015 bis März 2018 Parlamentarischer Staatssekretär beim Bundesminister der Finanzen; März 2018 bis Dezember 2021 Bundesminister für Gesundheit; seit Dezember 2021 stellvertretender Vorsitzender der CDU/CSU-Bundestagsfraktion.'\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "doc.to_json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "printable-service",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "What does the JSON representation of the short text contain? Which NLP applications are involved?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "assigned-range",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# filter tokens tagged as nouns\n",
+    "list(filter(lambda t: t.pos_ == 'NOUN', doc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "integral-costs",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "For some NLP applications, spaCy provides [nice visualizations](https://spacy.io/usage/visualizers):\n",
+    "- [named entities](https://en.wikipedia.org/wiki/Named-entity_recognition)\n",
+    "- syntax trees of [dependecy parsing](https://en.wikipedia.org/wiki/Dependency_grammar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "selected-instrumentation",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from spacy import displacy\n",
+    "\n",
+    "displacy.render(doc, style=\"ent\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "written-potential",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "displacy.render(doc, style=\"dep\")"
    ]
   },
   {
@@ -53,7 +178,8 @@
    "source": [
     "## Machine Learning\n",
     "\n",
-    "The field of machine learning is too broad to be introduced here. Please, see [Google's machine learning crash course](https://developers.google.com/machine-learning/crash-course/ml-intro)."
+    "The field of machine learning is too broad to be fully introduced here. Please, see [Google's machine learning crash course](https://developers.google.com/machine-learning/crash-course/ml-intro).\n",
+    "\n"
    ]
   },
   {
