- update printout - fix typos

--- a/1_warmup_and_setup.ipynb
+++ b/1_warmup_and_setup.ipynb
@@ -878,7 +878,7 @@
     "\n",
     "### Jupyter Notebooks\n",
     "\n",
-    "The [Jupyter notebook](https://jupyter-notebook.readthedocs.io/en/stable/) is an enviroment to interactively create a \"notebook\", a JSON-encoded document containing a list of input/output pairs (code, text using Markdown markup, images/plots). Notebooks are served by the notebook server and viewed/edited in the browser or can be converted into various document formats.\n",
+    "The [Jupyter notebook](https://jupyter-notebook.readthedocs.io/en/stable/) is an environment to interactively create a \"notebook\", a JSON-encoded document containing a list of input/output pairs (code, text using Markdown markup, images/plots). Notebooks are served by the notebook server and viewed/edited in the browser or can be converted into various document formats.\n",
     "\n",
     "### Editor and IDE\n",
     "\n",
@@ -893,7 +893,7 @@
     "\n",
     "### Virtual Environment and Docker\n",
     "\n",
-    "Why you need encapsulated environments to run applications or projects? The documentation of the [Python virtual environements](https://docs.python.org/3/tutorial/venv.html) explains...\n",
+    "Why you need encapsulated environments to run applications or projects? The documentation of the [Python virtual environments](https://docs.python.org/3/tutorial/venv.html) explains...\n",
     "\n",
     "> Python applications will often use packages and modules that don’t come as part of the standard library. Applications will sometimes need a specific version of a library, because the application may require that a particular bug has been fixed or the application may be written using an obsolete version of the library’s interface.\n",
     "> \n",
